<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="8dp"
    tools:context=".ContactDetailsActivity">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/addContactColor"
        android:hint="@string/back"
        android:textColor="@color/addButtonTextColor"
        android:textColorHint="#1B5E20"
        app:icon="@drawable/android_arrow_back"
        app:iconTint="@color/addButtonTextColor"
        app:layout_constraintBottom_toTopOf="@+id/tv_contactDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_contactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/contact_details"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/girl"
        app:layout_constraintBottom_toTopOf="@+id/nameprv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contactDetails" />

    <TextView
        android:id="@+id/nameprv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/namescroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/namescroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneprv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameprv">

        <TextView
            android:id="@+id/tv_namedetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/namedetail"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="373dp" />
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/phoneprv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/phone"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/phonescroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namescroll" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/phonescroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/descritpionprv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneprv">

        <TextView
            android:id="@+id/tv_phonedetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/phonedetail"
            android:textSize="30sp" />
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/descritpionprv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/description"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonescroll" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descritpionprv">

        <TextView
            android:id="@+id/tv_descriptiondetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/dots"
            android:textSize="30sp"
            app:layout_constraintVertical_bias="0.024" />

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>